fix long slim label cut off at the top

--- a/client/src/components/GORibbon/style.css
+++ b/client/src/components/GORibbon/style.css
@@ -1,3 +1,8 @@
+.ontology-ribbon {
+  margin-top: 50px;
+  flex-wrap: nowrap;
+}
+
 .ontology-ribbon__block:hover {
   /*font-weight: bold;*/
   color: black;
